--- a/base/deployments.yaml
+++ b/base/deployments.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
+  labels:
+    app.kubernetes.io/name: nginx
 spec:
   selector:
     matchLabels:
