--- a/edges/dev_simedge/application.yaml
+++ b/edges/dev_simedge/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prod-nginx-argo-application
+  name: argo-central-application
   namespace: argocd
 spec:
   project: default
@@ -9,10 +9,10 @@ spec:
   source:
     repoURL: https://github.com/alirezaghey/kustomize-argocd.git
     targetRevision: HEAD
-    path: overlays/prod
+    path: edges/dev_simedge/applications
   destination:
     server: https://kubernetes.default.svc
-    namespace: nginx-prod
+    namespace: argo-application
 
   syncPolicy:
     syncOptions:
