--- a/edges/dev_simedge/applications/application_dev.yaml
+++ b/edges/dev_simedge/applications/application_dev.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx-argo-application
+  name: argo-dev-application
   namespace: argocd
 spec:
   project: default
@@ -9,10 +9,14 @@ spec:
   source:
     repoURL: https://github.com/alirezaghey/kustomize-argocd.git
     targetRevision: HEAD
-    path: applications
+    path: edges/dev_simedge/overlays/dev
+    # kustomize:
+    #   replicas:
+    #     - count: 10
+    #       name: nginx
   destination:
     server: https://kubernetes.default.svc
-    namespace: nginx-argo
+    namespace: dev
 
   syncPolicy:
     syncOptions:
